kubernetes/apps/kube-prometheus-stack/overlays/shared/middleware-basicauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prom-remotewrite-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: prom-remotewrite-basicauth
