kubernetes/apps/kube-prometheus-stack/overlays/shared/ingress-remotewrite.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-remotewrite
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-prom-remotewrite-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prom-write.shared.h.svenlito.com
  rules:
    - host: prom-write.shared.h.svenlito.com
      http:
        paths:
          - path: /api/v1/write
            pathType: Exact
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
